style.css
* {
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
}

.header-container {
    display: flex;
    flex-direction: row;
    position: sticky;
    background-color: #1F2937;
    width: 100vw;
    align-items: flex-start;
    padding: 10px 10px;
}

.logo {
    color: #f9faf8;
    display: flex;
    align-items: center;
    margin-left: 24px;
    height: 36px;

}

.header-links {
    color:#e5e7eb;
    display: flex;
    align-items: center;
    gap: 10px;
    margin-left: auto;
    margin-right: 50px;
}

.sec1 {
    display: flex;
    flex-direction: row;
    background-color: #1F2937;
    color: white;
    margin: auto;
    width: 100vw;
}


.sec1-main {
    display: flex;
    flex-direction: column;
    align-items: center;
    align-content: space-between;
    text-align: center;
    margin: 25px 50px;
    width: 100vw;
}

.largetxt{
    font-size: 48px;
    font-weight: bolder;
    color: #f9faf8;
}

.smalltxt {
    color: #e5e7eb;
    font-size: 18px;
}

.sec1-img-wrap{
    display: block;
    background-color: #1F2937;
    width: 100vw;
}

.right-img {
    align-self: stretch;
    width: 500px;
    margin: 100px 100px;
}

button {
    background-color: #3882f6;
    color: #f9faf8;
    width: 5rem;
    height: 1.5rem;
    border-radius: 0.75rem;
}

.sec2 {
    display: flex;
    align-items: center;
    flex-direction: column;
    width: 100vw;
}

.box-row {
    display: flex;
    flex-direction: row;
}

.box-img {
    border: solid;
    border-width: 5px;
    border-color: #1F2937;
    border-radius: 1rem;
    max-width: 100%;
    margin: 10px 10px;
}

.subtext {

}

.sec3 {
    background-color: #e5e7eb;
    color: #1F2937;
    font-size: 36px;
    font-style: italic;
    width: 100vw;
}

.quote {
   padding: 5rem 5rem;
}

.sec4 {
    display: flex;
    flex-direction: row;
    background-color: #3882f6;
    color: #f9faf8;
    border-width: 100px;
    border-radius: 00.75rem;
    padding: 2rem 5rem;
}

.calltoaction {
    flex-direction: column;
}

.sec4 > button {
    width: 200px;
    height: 50px;
    margin-top: 2rem;
    margin-left: 10rem;
    border-color: #f9faf8;
}

